--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,11 @@
 			<version>2.4.1</version>
 		</dependency>
 
-
-
-
+		<dependency>
+			<groupId>org.mindrot</groupId>
+			<artifactId>jbcrypt</artifactId>
+			<version>0.4</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
